// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphQL operation coverage > separates declared mutation gaps from unregistered introspected mutation roots 1`] = `
{
  "declaredGaps": [
    "companyContactSendWelcomeEmail",
    "consentPolicyUpdate",
    "deliveryCustomizationActivation",
    "deliveryCustomizationCreate",
    "deliveryCustomizationDelete",
    "deliveryCustomizationUpdate",
    "deliveryPromiseParticipantsUpdate",
    "deliveryPromiseProviderUpsert",
    "deliverySettingUpdate",
    "disputeEvidenceUpdate",
    "fulfillmentConstraintRuleCreate",
    "fulfillmentConstraintRuleDelete",
    "fulfillmentConstraintRuleUpdate",
    "fulfillmentOrderClose",
    "fulfillmentOrderLineItemsPreparedForPickup",
    "fulfillmentOrderReschedule",
    "menuCreate",
    "menuDelete",
    "menuUpdate",
    "orderCreateManualPayment",
    "orderRiskAssessmentCreate",
    "privacyFeaturesDisable",
    "shopifyPaymentsPayoutAlternateCurrencyCreate",
    "urlRedirectBulkDeleteAll",
    "urlRedirectBulkDeleteByIds",
    "urlRedirectBulkDeleteBySavedSearch",
    "urlRedirectBulkDeleteBySearch",
    "urlRedirectCreate",
    "urlRedirectDelete",
    "urlRedirectImportCreate",
    "urlRedirectImportSubmit",
    "urlRedirectUpdate",
  ],
  "unregistered": [
    "orderEditUpdateDiscount",
    "subscriptionBillingAttemptCreate",
    "subscriptionBillingCycleBulkCharge",
    "subscriptionBillingCycleBulkSearch",
    "subscriptionBillingCycleCharge",
    "subscriptionBillingCycleContractDraftCommit",
    "subscriptionBillingCycleContractDraftConcatenate",
    "subscriptionBillingCycleContractEdit",
    "subscriptionBillingCycleEditDelete",
    "subscriptionBillingCycleEditsDelete",
    "subscriptionBillingCycleScheduleEdit",
    "subscriptionBillingCycleSkip",
    "subscriptionBillingCycleUnskip",
    "subscriptionContractActivate",
    "subscriptionContractAtomicCreate",
    "subscriptionContractCancel",
    "subscriptionContractCreate",
    "subscriptionContractExpire",
    "subscriptionContractFail",
    "subscriptionContractPause",
    "subscriptionContractProductChange",
    "subscriptionContractSetNextBillingDate",
    "subscriptionContractUpdate",
    "subscriptionDraftCommit",
    "subscriptionDraftDiscountAdd",
    "subscriptionDraftDiscountCodeApply",
    "subscriptionDraftDiscountRemove",
    "subscriptionDraftDiscountUpdate",
    "subscriptionDraftFreeShippingDiscountAdd",
    "subscriptionDraftFreeShippingDiscountUpdate",
    "subscriptionDraftLineAdd",
    "subscriptionDraftLineRemove",
    "subscriptionDraftLineUpdate",
    "subscriptionDraftUpdate",
  ],
}
`;

exports[`GraphQL operation coverage > snapshots introspected Admin GraphQL mutations that are not formally supported yet 1`] = `
[
  "companyContactSendWelcomeEmail",
  "consentPolicyUpdate",
  "deliveryCustomizationActivation",
  "deliveryCustomizationCreate",
  "deliveryCustomizationDelete",
  "deliveryCustomizationUpdate",
  "deliveryPromiseParticipantsUpdate",
  "deliveryPromiseProviderUpsert",
  "deliverySettingUpdate",
  "disputeEvidenceUpdate",
  "fulfillmentConstraintRuleCreate",
  "fulfillmentConstraintRuleDelete",
  "fulfillmentConstraintRuleUpdate",
  "fulfillmentOrderClose",
  "fulfillmentOrderLineItemsPreparedForPickup",
  "fulfillmentOrderReschedule",
  "menuCreate",
  "menuDelete",
  "menuUpdate",
  "orderCreateManualPayment",
  "orderEditUpdateDiscount",
  "orderRiskAssessmentCreate",
  "privacyFeaturesDisable",
  "shopifyPaymentsPayoutAlternateCurrencyCreate",
  "subscriptionBillingAttemptCreate",
  "subscriptionBillingCycleBulkCharge",
  "subscriptionBillingCycleBulkSearch",
  "subscriptionBillingCycleCharge",
  "subscriptionBillingCycleContractDraftCommit",
  "subscriptionBillingCycleContractDraftConcatenate",
  "subscriptionBillingCycleContractEdit",
  "subscriptionBillingCycleEditDelete",
  "subscriptionBillingCycleEditsDelete",
  "subscriptionBillingCycleScheduleEdit",
  "subscriptionBillingCycleSkip",
  "subscriptionBillingCycleUnskip",
  "subscriptionContractActivate",
  "subscriptionContractAtomicCreate",
  "subscriptionContractCancel",
  "subscriptionContractCreate",
  "subscriptionContractExpire",
  "subscriptionContractFail",
  "subscriptionContractPause",
  "subscriptionContractProductChange",
  "subscriptionContractSetNextBillingDate",
  "subscriptionContractUpdate",
  "subscriptionDraftCommit",
  "subscriptionDraftDiscountAdd",
  "subscriptionDraftDiscountCodeApply",
  "subscriptionDraftDiscountRemove",
  "subscriptionDraftDiscountUpdate",
  "subscriptionDraftFreeShippingDiscountAdd",
  "subscriptionDraftFreeShippingDiscountUpdate",
  "subscriptionDraftLineAdd",
  "subscriptionDraftLineRemove",
  "subscriptionDraftLineUpdate",
  "subscriptionDraftUpdate",
  "urlRedirectBulkDeleteAll",
  "urlRedirectBulkDeleteByIds",
  "urlRedirectBulkDeleteBySavedSearch",
  "urlRedirectBulkDeleteBySearch",
  "urlRedirectCreate",
  "urlRedirectDelete",
  "urlRedirectImportCreate",
  "urlRedirectImportSubmit",
  "urlRedirectUpdate",
]
`;
